--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .bootstrap-switch {
   display: inline-block;
   direction: ltr;
@@ -1337,6 +1339,10 @@
       color: #4bb5ff;
       text-decoration: none;
       box-shadow: none; }
+
+.myname{
+  
+}
 
 .btn-warning {
   background-color: #FFB236;
@@ -5270,3 +5276,10 @@ a.credit {
 /* Common Style */
 .section {
   padding-bottom: 0; }
+
+  .myname{
+    font-family: "Great Vibes", serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 25px;
+  }
