--- a/css/main.css
+++ b/css/main.css
@@ -231,11 +231,7 @@
 .bootstrap-switch-on .bootstrap-switch-handle-off {
   opacity: 0; }
 
-/*! nouislider - 9.1.0 - 2016-12-10 16:00:32 */
-/* Functional styling;
- * These styles are required for noUiSlider to function.
- * You don't need to change these rules to apply your design.
- */
+
 .noUi-target,
 .noUi-target * {
   -webkit-touch-callout: none;
@@ -2029,7 +2025,7 @@ textarea.form-control {
   .progress-container.progress-neutral .progress-badge {
     color: #FFFFFF; }
   .progress-container.progress-primary .progress {
-    background: rgba(55, 140, 63, 0.4); }
+    background: rgba(112, 55, 140, 0.4); }
   .progress-container.progress-primary .progress-bar {
     background: #42006bd2; }
   .progress-container.progress-primary .progress-value,
@@ -5090,7 +5086,7 @@ Created using IcoMoon - icomoon.io
   transform: scale(1); }
 
 .gallery figure.cc-effect:hover figcaption:before {
-  background: rgba(27, 23, 23, 0.5); }
+  background: rgb(141, 48, 191, 0.8); }
 
 .gallery figure.cc-effect:hover .h4,
 .gallery figure.cc-effect:hover p,
