--- a/css/main.css
+++ b/css/main.css
@@ -4989,6 +4989,7 @@ Created using IcoMoon - icomoon.io
 /* Images Gallery Style*/
 .gallery .cc-porfolio-image figure {
   position: relative;
+  height: 250px;
   overflow: hidden;
   text-align: center; }
 
